# gamepad_reader

./: CMakeLists.txt  README.md  package.xml
CARMAKER/: CMakeLists.txt  GamepadReader.cpp  GamepadReader.h  definitions.h
control_maps/: logitech_g920_map.txt
forms/: console.ui
include/gamepad_reader/: GamepadReader.h  console.h  definitions.h
includes/: GamepadReader.h  console.h
msg/: gamepads.msg  logitech_g920.msg
resources/: gamepad_maps.qrc  images.qrc
src/: GamepadReader.cpp  console.cpp  main.cpp
